# api_demos

./: .gitignore  README.md  pyproject.toml
.github/workflows/: nbmake.yaml
client-stubs/: README.md  rem.py  rem.ts
google-sheets/: Code.gs  README.md
notebooks/: All About REM Statistics.ipynb  Health API Demo.ipynb  Health Impacts.ipynb  README.md  REM Demo.ipynb  REM Modeling Baseline.ipynb
react/: README.md  package-lock.json  package.json
react/public/: index.html
react/src/: App.js  styles.css
rem-with-nextjs/: .env  README.md  package-lock.json  package.json
rem-with-nextjs/app/: globals.css  layout.tsx  page.tsx  serverSavings.ts
www/: README.md  index.html
www/css/: demo.css
www2/: README.md  index-old.html  index.html
www2/css/: demo.css
